style(Produtos): ajustes no posicionamento dos elementos no mobile

--- a/src/components/Cards/card.scss
+++ b/src/components/Cards/card.scss
@@ -2,6 +2,10 @@ h2 {
     font-weight: 400;
     padding-left: 4rem;
     color: var(--color-title);
+    @media(max-width: 768px){
+        padding-left: 3rem;
+        margin-bottom: 20px;
+    }
 }
 .embla {
     overflow: hidden;
