--- a/src/components/SectionInstitutional/institutional.scss
+++ b/src/components/SectionInstitutional/institutional.scss
@@ -1,5 +1,5 @@
 .section-institutional {
-    margin-top: 100px;
+    margin: 100px 0px;
     display: flex;
     padding-left: 4rem;
     gap: 2rem; 
