--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -18,3 +18,9 @@
 body {
     font-family: var(--font-primary);
 }
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
