--- a/src/components/Cards/card.scss
+++ b/src/components/Cards/card.scss
@@ -2,8 +2,9 @@
     font-weight: 400;
     padding-left: 4rem;
     color: var(--color-title);
+    margin-top: 50px;
     @media(max-width: 768px){
-        padding-left: 3rem;
+        padding-left: 1.5rem;
         margin-bottom: 20px;
     }
 }
