--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -178,7 +178,7 @@
 .footer-payments {
     width: 100%;
     text-align: center;
-    margin-bottom: 20px;
+    margin: 30px 0;
 
     h3 {
         margin-bottom: 10px;
