--- a/src/components/Banner/banner.scss
+++ b/src/components/Banner/banner.scss
@@ -16,12 +16,50 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        color: white;
+        color: var(--color-secondary);
         text-align: center;
         z-index: 2;
         padding: 1rem;
+        h1 {
+            font-size: 2.5rem;
+            margin-bottom: 1rem;
+        }
+
+        p {
+            font-size: 1.2rem;
+            margin-bottom: 2rem;
+        }
+
+        .btn-cta {
+            background-color: var(--color-primary);
+            border: none;
+            padding: 0.8rem 1.5rem;
+            font-size: 1rem;
+            color: var(--color-secondary);
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background 0.3s;
+
+            &:hover {
+                background-color: var(--color-title);
+            }
+        }
     }
     @media (max-width: 768px) {
         height: 172px; 
+        .banner-content {
+            top: 80%;
+            left: 20%;
+            h1 {
+                display: none;
+            }
+            p {
+                display: none;
+            }
+            .btn-cta {
+                padding: 0.5rem 1rem;
+                font-size: 0.9rem;
+            }
+        }
     }
 }
