--- a/src/containers/BenefitsContainer/benefitsOption.scss
+++ b/src/containers/BenefitsContainer/benefitsOption.scss
@@ -9,6 +9,7 @@
     margin: 52px 0 72px 0;
     @media(max-width: 768px){
         margin: 10px 0 ;
+        width: 100%;
     }
     &__icon {
         flex-shrink: 0;
